--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,7 +18,7 @@ custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=false
 vram_texture_compression/for_mobile=false
-html/custom_html_shell="res://src/export_shell.html"
+html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
 html/experimental_virtual_keyboard=false
