--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,7 +18,7 @@ custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=false
 vram_texture_compression/for_mobile=false
-html/custom_html_shell="res://src/export_shell.html"
+html/custom_html_shell="res://addons/scaffolder/src/export_shell.html"
 html/head_include=""
 html/canvas_resize_policy=2
 html/experimental_virtual_keyboard=false
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="dist/gmtk-2021.exe"
+export_path="dist/momma_duck.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="dist/index.apk"
+export_path="dist/momma_duck.apk"
 script_export_mode=1
 script_encryption_key=""
 
